objects/Benefit_Header__c.object
<CustomObject>
    <fields>
        <fullName>Benefit_Header_Id__c</fullName>
        <label>Benefit Header  Id (no use)</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Header_Name__c</fullName>
        <description>Benefit header description</description>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id (no use)</label>
        <length>125</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key (no use)</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan Group (no use)</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Benefit Headers</relationshipLabel>
        <relationshipName>Benefit_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Group(no Use)</label>
        <referenceTo>SGR_Product_Group__c</referenceTo>
        <relationshipLabel>Benefit Headers</relationshipLabel>
        <relationshipName>Benefit_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <description>Defines order in which benefits are to be displayed</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Benefit Header</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Benefit Headers</pluralLabel>
    <recordTypes>
        <fullName>Benefit_Header_Record_Type</fullName>
        <active>true</active>
        <label>Benefit Header Record Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>